--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,20 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	<dependencies>
-
-	</dependencies>
 
 
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals><goal>install</goal></goals>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<scm><developerConnection>scm:git:https://github.com/Mehdibhy0/sfg-pet-clinic.git</developerConnection></scm>
 </project>
