--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
+					<checkModificationExcludes>
+						<checkModificationExclude>pom.xml</checkModificationExclude>
+					</checkModificationExcludes>
 					<goals><goal>install</goal></goals>
 				</configuration>
 			</plugin>
