--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>sfg-pet-clinic</artifactId>
         <groupId>mehdi.springframework</groupId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>1.1</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -19,7 +19,7 @@
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>mehdi.springframework</groupId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
         <groupId>org.springframework.boot</groupId>
